--- a/ProjetoAM--Site/FiapAM/FiapAM.csproj
+++ b/ProjetoAM--Site/FiapAM/FiapAM.csproj
@@ -577,7 +577,7 @@
     <Content Include="Views\Contato\MotivoContato.cshtml" />
     <Content Include="Views\Contato\VisualizarContato.cshtml" />
     <Content Include="Views\Noticia\Cadastrar.cshtml" />
-    <Content Include="Views\Noticia\CadastrarImagem.cshtml" />
+    <Content Include="Views\Noticia\InserirImagem.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
