--- a/ProjetoAM--Site/FiapAM/FiapAM.csproj
+++ b/ProjetoAM--Site/FiapAM/FiapAM.csproj
@@ -587,6 +587,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Arquivos\" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{4A0DDDB5-7A95-4FBF-97CC-616D07737A77}" />
