--- a/ProjetoAM--Site/FiapAM/FiapAM.csproj
+++ b/ProjetoAM--Site/FiapAM/FiapAM.csproj
@@ -672,6 +672,7 @@
     <Content Include="Content\scss\material-dashboard\_tooltip.scss" />
     <Content Include="Content\scss\material-dashboard\_type.scss" />
     <Content Include="Content\scss\material-dashboard\_variables.scss" />
+    <None Include="Properties\PublishProfiles\CustomProfile.pubxml" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
     <Content Include="Scripts\jquery-3.3.1.min.js" />
