--- a/ProjetoAM--Site/FiapAM/Web.config
+++ b/ProjetoAM--Site/FiapAM/Web.config
@@ -21,8 +21,8 @@
   </system.web>
   <!-- String de conexão com o banco de dados-->
   <connectionStrings>
-    <add name="OracleDB" connectionString="Data Source=(DESCRIPTION=(ADDRESS=(PROTOCOL=TCP)(HOST=oracle.fiap.com.br)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=orcl)));User Id=rm76355;Password=090198;" providerName="Oracle.ManagedDataAccess.Client" />
-    <add name="OracleDbContext" providerName="Oracle.ManagedDataAccess.Client" connectionString="User Id=RM76355;Password=090198;Data Source=orcl" />
+    <add name="OracleDB" connectionString="Data Source=(DESCRIPTION=(ADDRESS=(PROTOCOL=TCP)(HOST=)(PORT=))(CONNECT_DATA=(SERVICE_NAME=)));User Id=;Password=;" providerName="Oracle.ManagedDataAccess.Client" />
+    <add name="OracleDbContext" providerName="Oracle.ManagedDataAccess.Client" connectionString="User Id=;Password=;Data Source=" />
   </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -59,8 +59,8 @@
   <oracle.manageddataaccess.client>
     <version number="*">
       <dataSources>
-        <dataSource alias="orcl" descriptor="(DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=oracle.fiap.com.br)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=orcl))) " />
-        <dataSource alias="SampleDataSource" descriptor="(DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=localhost)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=ORCL))) " />
+        <dataSource alias="orcl" descriptor="(DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=)(PORT=))(CONNECT_DATA=(SERVICE_NAME=))) " />
+        <dataSource alias="SampleDataSource" descriptor="(DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=localhost)(PORT=))(CONNECT_DATA=(SERVICE_NAME=))) " />
       </dataSources>
     </version>
   </oracle.manageddataaccess.client>
